dphys-config (20100216-2) UNRELEASED; urgency=low

  * Add two feature patches:
    + Support for hobbit reporting
    + Interactive and Diff mode by Claude Becker.
    Use quilt patch management and add the features to the long description
  * Add new script reverse-dphys-config
    + build-depend on help2man for its manpage
    + suggest openssh-client | ssh-client
  * debian/rules: replace mkdir + cp by install -D
  * debian/copyright:
    + Remove obsolete copyright of findcdroms.c (no more included upstream
      since 20090926)
    + Refer to /usr/share/common-licenses/GPL-2 instead of the symbolic
      link at /usr/share/common-licenses/GPL
    + Update copyright years and my e-mail address
    + Reword the section about examples
    + Mention reverse-dphys-config
    + Update licensing information of the packaging to explicitly mention
      version 2 or newer of the GPL.
    + Always use dash, does not work with bash anymore. Depend on dash
      (for pre-Squeeze systems)
  * Bump Standards-Version to 3.9.3 (no changes)
  * Fix some lintian warnings:
    + debian-rules-missing-recommended-target
    + no-upstream-changelog
    + init.d-script-does-not-implement-optional-option status
    + missing-debian-source-format (now explicitly "1.0" format)

 -- Axel Beckert <abe@debian.org>  Fri, 10 Aug 2012 15:06:37 +0200

dphys-config (20100216-1) unstable; urgency=low

  * New upstream release
    - Works even with LANG not set to C or en_*
    - New debug option LEAVE_WGET_OUTPUT
    - Fixes some misspellings reported by Lintian 2.3.x
    - Other not so common spellings won't be fixed by upstream, so let's
      keep lintian quiet about them by using lintian overrides as
      suggested on the lintian mailing list.
  * Fix Lintian warning debhelper-but-no-misc-depends by adding
    ${misc:Depends} to the dependencies.
  * Bumped Standards-Version to 3.8.4 (no changes)
  * Changed the maintainer e-mail address to my debian.org address.